feat: added onStarted() with assemble controllers , refactor start()/stop() method (#43)
Task: IS-733